access full profile

--- a/Initial Insights.ipynb
+++ b/Initial Insights.ipynb
@@ -23,6 +23,7 @@
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.common.by import By\n",
     "import time\n",
+    "from bs4 import BeautifulSoup\n",
     "import malaya\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -40,10 +41,11 @@
    "source": [
     "user_name = utils.username\n",
     "pass_word = utils.password\n",
+    "profile = 'mediapermata'\n",
     "\n",
     "path = r'/Users/chong02/chromedriver.exe'\n",
     "driver = webdriver.Chrome(path)\n",
-    "driver.get('https://instagram.com/')\n",
+    "driver.get('https://www.instagram.com/')\n",
     "\n",
     "# Logging in\n",
     "time.sleep(10)\n",
@@ -58,9 +60,44 @@
     "not_now = driver.find_element(By.XPATH, \"//button[contains(text(), 'Not Now')]\").click()\n",
     "\n",
     "# Bypass notifs\n",
-    "time.sleep(60)\n",
-    "not_now_again = driver.find_element(By.XPATH, \"//button[contains(text(), 'Not Now')]\").click()"
+    "time.sleep(30)\n",
+    "not_now_again = driver.find_element(By.XPATH, \"//button[contains(text(), 'Not Now')]\").click()\n",
+    "\n",
+    "# Search button\n",
+    "time.sleep(5)\n",
+    "open_search_tab = driver.find_element(By.XPATH, \"//a[@href='#'][@role='link']\").click()\n",
+    "\n",
+    "# Search for profile\n",
+    "time.sleep(5)\n",
+    "search_bar = driver.find_element(By.XPATH, \"//input[@placeholder='Search']\")\n",
+    "search_bar.send_keys(profile)\n",
+    "\n",
+    "# Click on profile\n",
+    "time.sleep(10)\n",
+    "profile_link = driver.find_element(By.XPATH, f\"//a[@href='/{profile}/'][@role='link']\").click()\n",
+    "\n",
+    "# Save page html\n",
+    "html = driver.page_source"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "26ec6033-fb30-461e-8781-cf52e05c187e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CREATE \n",
+    "soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef9a69aa-3c85-4c8b-a12a-2d70420b0549",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
