scrape first 12 posts

--- a/Initial Insights.ipynb
+++ b/Initial Insights.ipynb
@@ -24,6 +24,7 @@
     "from selenium.webdriver.common.by import By\n",
     "import time\n",
     "from bs4 import BeautifulSoup\n",
+    "import re\n",
     "import malaya\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -73,10 +74,11 @@
     "search_bar.send_keys(profile)\n",
     "\n",
     "# Click on profile\n",
-    "time.sleep(10)\n",
+    "time.sleep(20)\n",
     "profile_link = driver.find_element(By.XPATH, f\"//a[@href='/{profile}/'][@role='link']\").click()\n",
     "\n",
     "# Save page html\n",
+    "time.sleep(30)  # Wait for DOM to load\n",
     "html = driver.page_source"
    ]
   },
@@ -87,14 +89,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CREATE \n",
+    "# Create soup\n",
     "soup = BeautifulSoup(html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ef9a69aa-3c85-4c8b-a12a-2d70420b0549",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_posts(style):\n",
+    "    return style and re.compile(r'object-fit: cover;').search(style)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0830d6a3-7323-412b-a6ca-f8aea10eb8ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posts = soup.find_all(style=find_posts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a73f901b-5e5f-4fab-9a70-c6224a933ca2",
    "metadata": {},
    "outputs": [],
    "source": []
