implemented comment scraper

--- a/Initial Insights.ipynb
+++ b/Initial Insights.ipynb
@@ -40,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "base_url = 'https://instagram.com'\n",
     "user_name = utils.username\n",
     "pass_word = utils.password\n",
     "profile = 'mediapermata'\n",
@@ -77,6 +78,24 @@
     "time.sleep(20)\n",
     "profile_link = driver.find_element(By.XPATH, f\"//a[@href='/{profile}/'][@role='link']\").click()\n",
     "\n",
+    "# Infinite scrolling mechanism\n",
+    "time.sleep(10)\n",
+    "SCROLL_PAUSE_TIME = 1\n",
+    "counter = 0\n",
+    "# Get scroll height\n",
+    "last_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "while True and counter < 100:\n",
+    "    # Scroll down to bottom\n",
+    "    driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "    # Wait to load page\n",
+    "    time.sleep(SCROLL_PAUSE_TIME)\n",
+    "    # Calculate new scroll height and compare with last scroll height\n",
+    "    new_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "    if new_height == last_height:\n",
+    "        break\n",
+    "    last_height = new_height\n",
+    "    counter += 1\n",
+    "    \n",
     "# Save page html\n",
     "time.sleep(30)  # Wait for DOM to load\n",
     "html = driver.page_source"
@@ -95,29 +114,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "ef9a69aa-3c85-4c8b-a12a-2d70420b0549",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42 posts captured\n"
+     ]
+    }
+   ],
    "source": [
-    "def find_posts(style):\n",
-    "    return style and re.compile(r'object-fit: cover;').search(style)"
+    "def find_posts(href):\n",
+    "    return href and re.compile(r'\\/p\\/.+\\/').search(href)\n",
+    "\n",
+    "posts = soup.find_all(href=find_posts)\n",
+    "post_urls = [base_url + post.get('href') for post in posts]\n",
+    "print(f'{len(post_urls)} posts captured')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0830d6a3-7323-412b-a6ca-f8aea10eb8ec",
+   "execution_count": 18,
+   "id": "e252abf6-d4a7-4226-989f-434b1a0288a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'posts_comments_users' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 25\u001b[0m\n\u001b[1;32m     23\u001b[0m     post_comments \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mappend(post_comments, comments_arr)\n\u001b[1;32m     24\u001b[0m     post_comments_users \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mappend(post_comments_users, users_arr)\n\u001b[0;32m---> 25\u001b[0m post_comments, \u001b[43mposts_comments_users\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'posts_comments_users' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "posts = soup.find_all(style=find_posts)"
+    "def find_usernames(alt):\n",
+    "    return alt and re.compile(r'profile picture').search(alt)\n",
+    "\n",
+    "post_comments = np.array([])\n",
+    "post_comments_users = np.array([])\n",
+    "\n",
+    "for url in post_urls:\n",
+    "    driver.get(url)\n",
+    "    time.sleep(20)\n",
+    "    post_html = driver.page_source\n",
+    "    post_soup = BeautifulSoup(post_html, 'html.parser')\n",
+    "    comments = post_soup.find_all('span', class_='_aacl _aaco _aacu _aacx _aad7 _aade')\n",
+    "    comment_count = len(comments)\n",
+    "    users = post_soup.find_all(alt=find_usernames)[-comment_count:]\n",
+    "    comments_arr = np.array([])\n",
+    "    users_arr = np.array([])\n",
+    "    for comment in comments:\n",
+    "        text = comment.text\n",
+    "        comments_arr = np.append(comments_arr, text)\n",
+    "    for user in users:\n",
+    "        username = user.get('alt').split(\"'\")[0]\n",
+    "        users_arr = np.append(users_arr, username)\n",
+    "    post_comments = np.append(post_comments, comments_arr)\n",
+    "    post_comments_users = np.append(post_comments_users, users_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "fdfd2497-375b-4bf2-bf28-40f34ae507a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "196"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(post_comments_users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1629a3a9-3835-4ffe-9192-d9a488f250ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bibsterphs'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users[-3:][0].get('alt').split(\"'\")[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4c14d383-ebab-4234-9af5-dccefd539b0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "only integer scalar arrays can be converted to a scalar index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m test1 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhola\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mni hao\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      2\u001b[0m test2 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhelllo\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m----> 3\u001b[0m combined \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m combined\n",
+      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: only integer scalar arrays can be converted to a scalar index"
+     ]
+    }
+   ],
+   "source": [
+    "test1 = np.array(['hola', 'ni hao'])\n",
+    "test2 = np.array(['hello', 'helllo'])\n",
+    "combined = []\n",
+    "combined"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a73f901b-5e5f-4fab-9a70-c6224a933ca2",
+   "id": "16b7f4bd-c5f7-4f2f-a51b-e382ced7a586",
    "metadata": {},
    "outputs": [],
    "source": []
